--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,11 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Open index.html",
-            "file": "c:\\Users\\obaid\\OneDrive - Universitetet i Oslo\\CV\\IT\\CV_website\\cv\\index.html"
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Start i Edge",
+      "request": "launch",
+      "type": "msedge",
+      "file": "${workspaceFolder}/index.html"
+    }
+  ]
 }
